tweak - remove 2 pages from home menu -padding for contact fix - remove overflow for sections - add bg color for all pages for proper blend mode

--- a/src/Style/Home.scss
+++ b/src/Style/Home.scss
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     z-index: 1;
     position: relative;
     font-size: 1.5rem;
