--- a/src/Style/main.css
+++ b/src/Style/main.css
@@ -118,6 +118,7 @@ body,
 }
 
 #root {
+  background: rgba(255, 255, 255, 0.025);
   background-position: center;
   background-size: cover;
   height: auto;
@@ -151,6 +152,7 @@ body {
 
 section {
   padding-inline: 5vw;
+  overflow: hidden;
 }
 
 ul {
